--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Alke Wallet | Index</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Alke Wallet</h1>
+    </header>
+    <main>
+        <a href="/login.html">Ingresar</a>
+    </main>
+    <footer>
+        <p>
+            &copy; Alke Wallet 2025
+        </p>
+    </footer>
 </body>
 </html>
