--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,43 @@
     <title>Alke Wallet | Menu</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Alke Wallet</h1>
+        <h3>Bienvenido(a)</h3>
+        <p><a href="login.html">Cerrar Sesión</a></p>
+    </header>
+    <main>
+        <section>
+            <div id="selected-account">
+                <h3>Cuenta N°0002311423</h3>
+                <h4>Tu saldo es de:</h4>
+                <h2>$140000</h2>
+            </div>
+
+            <form>
+                <label for="account">Seleccione una cuenta:</label>
+                <select name="account" id="account">
+                    <option value="cuenta-0002311423">N°0002311423</option>
+                    <option value="cuenta-0002355196">N°0002355196</option>
+                    <option value="cuenta-0002378830">N°0002378830</option>
+                </select>
+            </form>
+        </section>
+        <section>
+            <p>¿Qué desea hacer?</p>
+            <nav>
+                <ul>
+                    <li><a href="deposit.html">Depositar</a></li>
+                    <li><a href="sendmoney.html">Enviar Dinero</a></li>
+                    <li><a href="transactions.html">Últimos movimientos</a></li>
+                </ul>
+            </nav>
+        </section>
+    </main>
+    <footer>
+        <p>
+            &copy; Alke Wallet 2025
+        </p>
+    </footer>
 </body>
 </html>
