--- a/login.html
+++ b/login.html
@@ -7,6 +7,26 @@
     <title>Alke Wallet | Login</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Alke Wallet</h1>
+    </header>
+    <main>
+        <form action="menu.html" method="post"> <!-- ERROR: Método NO AUTORIZADO con Live Server-->
+            <div>
+                <label for="email">Correo electrónico</label><br>
+                <input type="email" name="email" id="email"><br><br>
+            </div>
+            <div>
+                <label for="password">Contraseña</label><br>
+                <input type="password" name="password" id="password"><br><br>
+            </div>
+            <button type="submit">Iniciar Sesión</button>
+        </form>
+    </main>
+    <footer>
+        <p>
+            &copy; Alke Wallet 2025
+        </p>
+    </footer>
 </body>
 </html>
