--- a/index.html
+++ b/index.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Allan Morales">
     <title>Alke Wallet | Index</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <header>
-        <h1>Alke Wallet</h1>
+
+<body class="d-flex flex-column min-vh-100">
+    <header class="py-4">
+        <div class="container text-center">
+            <div class="mb-4">
+                <img src="assets/img/logo.webp" alt="Alke Wallet" class="img-fluid logo-custom">
+            </div>
+            <h1 class="display-4 fw-bold logo-a montserrat-medium">Alke Wallet</h1>
+            <p class="lead text-muted">Tu billetera digital segura</p>
+        </div>
     </header>
-    <main>
-        <a href="/login.html">Ingresar</a>
+
+    <main class="flex-grow-1 d-flex align-items-center justify-content-center">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-8 col-lg-6 text-center">
+                    <div class="card shadow-lg border-0 p-4">
+                        <div class="card-body">
+                            <h2 class="card-title h3 mb-4">Bienvenido</h2>
+                            <p class="card-text mb-4">
+                                Accede a tu cuenta para gestionar tus finanzas de manera segura y rápida.
+                            </p>
+                            <a href="/login.html" class="btn btn-primary btn-lg px-5 py-3">
+                                <i class="bi bi-box-arrow-in-right me-2"></i>Ingresar
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer>
-        <p>
-            &copy; Alke Wallet 2025
-        </p>
+
+    <footer class="py-4 bg-dark text-white mt-auto">
+        <div class="container text-center">
+            <p class="mb-0">&copy; Alke Wallet 2025. Todos los derechos reservados.</p>
+        </div>
     </footer>
+
+    <!-- Bootstrap Bundle con Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </body>
+
 </html>
