--- a/login.html
+++ b/login.html
@@ -1,160 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Allan Morales">
-  <title>Alke Wallet | Login</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <!-- Bootstrap Icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Allan Morales">
+    <title>Alke Wallet | Login</title>
 </head>
-
-<body class="d-flex flex-column min-vh-100">
-  <!-- Header -->
-  <header class="bg-primary text-white shadow">
-    <div class="container py-3">
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="d-flex align-items-center">
-          <!-- Logo -->
-          <img src="assets/img/logo.webp" alt="Alke Wallet" class="img-fluid me-3"
-            style="max-height: 40px; width: auto;">
-          <h1 class="h3 mb-0 montserrat-medium">Alke Wallet</h1>
-        </div>
-        <nav>
-          <a href="index.html" class="btn btn-outline-light btn-sm">
-            <i class="bi bi-house-door me-1"></i>Inicio
-          </a>
-        </nav>
-      </div>
-    </div>
-  </header>
-
-  <!-- Contenido principal -->
-  <main class="flex-grow-1 py-5">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-12 col-md-8 col-lg-6">
-          <div class="card shadow-lg border-0">
-            <div class="card-header bg-light py-3">
-              <h2 class="card-title h4 mb-0 text-center">
-                <i class="bi bi-box-arrow-in-right me-2"></i>Iniciar Sesión
-              </h2>
+<body>
+    <header>
+        <h1>Alke Wallet</h1>
+    </header>
+    <main>
+        <form action="menu.html" method="post"> <!-- ERROR: Método NO AUTORIZADO con Live Server-->
+            <div>
+                <label for="email">Correo electrónico</label><br>
+                <input type="email" name="email" id="email"><br><br>
             </div>
-            <div class="card-body p-4">
-              <!-- Cambia el método a GET para evitar el error con Live Server -->
-              <form action="menu.html" method="get">
-                <!-- Email -->
-                <div class="mb-4">
-                  <label for="email" class="form-label fw-bold">
-                    <i class="bi bi-envelope me-1"></i>Correo electrónico
-                  </label>
-                  <input type="email" class="form-control form-control-lg" name="email" id="email"
-                    placeholder="ejemplo@correo.com" required>
-                  <div class="form-text">
-                    Ingresa el correo asociado a tu cuenta
-                  </div>
-                </div>
-
-                <!-- Contraseña -->
-                <div class="mb-4">
-                  <label for="password" class="form-label fw-bold">
-                    <i class="bi bi-key me-1"></i>Contraseña
-                  </label>
-                  <div class="input-group">
-                    <input type="password" class="form-control form-control-lg" name="password" id="password"
-                      placeholder="Ingresa tu contraseña" required>
-                    <button class="btn btn-outline-secondary" type="button" id="togglePassword">
-                      <i class="bi bi-eye"></i>
-                    </button>
-                  </div>
-                  <div class="form-text">
-                    <a href="#" class="text-decoration-none">
-                      <i class="bi bi-question-circle me-1"></i>¿Olvidaste tu contraseña?
-                    </a>
-                  </div>
-                </div>
-
-                <!-- Recordar sesión (opcional) -->
-                <div class="mb-4 form-check">
-                  <input type="checkbox" class="form-check-input" id="rememberMe">
-                  <label class="form-check-label" for="rememberMe">
-                    Recordar mi sesión en este dispositivo
-                  </label>
-                </div>
-
-                <!-- Botones -->
-                <div class="d-grid gap-2">
-                  <button type="submit" class="btn btn-primary btn-lg py-3">
-                    <i class="bi bi-box-arrow-in-right me-2"></i>Iniciar Sesión
-                  </button>
-                  <a href="index.html" class="btn btn-outline-secondary">
-                    <i class="bi bi-arrow-left me-1"></i>Volver al inicio
-                  </a>
-                </div>
-              </form>
+            <div>
+                <label for="password">Contraseña</label><br>
+                <input type="password" name="password" id="password"><br><br>
             </div>
-          </div>
-
-          <!-- Enlace a registro (si lo necesitas) -->
-          <div class="text-center mt-4">
-            <p class="text-muted">
-              ¿No tienes una cuenta?
-              <a href="#" class="text-decoration-none fw-bold">
-                Regístrate aquí
-              </a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <footer class="bg-dark text-white py-4 mt-auto">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6">
-          <p class="mb-0">
-            <i class="bi bi-shield-lock me-1"></i>
-            &copy; Alke Wallet 2025. Tu seguridad es nuestra prioridad.
-          </p>
-        </div>
-        <div class="col-md-6 text-md-end">
-          <small class="text-light">
-            <i class="bi bi-info-circle me-1"></i>
-            Sistema de banca en línea seguro y confiable
-          </small>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-    crossorigin="anonymous"></script>
-
-  <!-- Script para mostrar/ocultar contraseña -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const togglePassword = document.getElementById('togglePassword');
-      const passwordInput = document.getElementById('password');
-      const eyeIcon = togglePassword.querySelector('i');
-
-      togglePassword.addEventListener('click', function () {
-        const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
-        passwordInput.setAttribute('type', type);
-
-        // Cambiar icono
-        eyeIcon.classList.toggle('bi-eye');
-        eyeIcon.classList.toggle('bi-eye-slash');
-      });
-    });
-  </script>
+            <button type="submit">Iniciar Sesión</button>
+        </form>
+    </main>
+    <footer>
+        <p>
+            &copy; Alke Wallet 2025
+        </p>
+    </footer>
 </body>
-
 </html>
