--- a/deposit.html
+++ b/deposit.html
@@ -1,48 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Allan Morales">
-    <title>Alke Wallet | Deposit</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Allan Morales">
+  <title>Alke Wallet | Deposit</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <head>
-        <h1>Alke Wallet</h1>
-        <h2>Depósito</h2>
-        <nav>
-            <ul>
-                <li><a href="login.html">Cerrar Sesión</a></li>
-                <li><a href="menu.html">Volver al menú</a></li>
-            </ul>
-        </nav>
-    </head>
-    <main>
-        <form action="" method="post">
-            <!--Desde-->
-            <label for="from-account">Cuenta de Origen</label><br>
-            <select name="from-account" id="from-account">
-                <option value="cuenta-0002311423">N°0002311423</option>
-                <option value="cuenta-0002355196">N°0002355196</option>
-                <option value="cuenta-0002378830">N°0002378830</option>
-            </select>
-            <p id="available-balance">Saldo disponible: $140000</p>
-            <!--Hacia-->
-            <label for="to-account">Cuenta de Destino</label><br>
-            <select name="to-account" id="to-account">
-                <option value="cuenta-0002311423">N°0002311423</option>
-                <option value="cuenta-0002355196">N°0002355196</option>
-                <option value="cuenta-0002378830">N°0002378830</option>
-            </select><br><br>
-            <label for="ammount">Monto</label><br>
-            <input type="number" name="ammount" id="ammount" min="1" placeholder="ej:5000"><br><br>
-            <button type="submit">Depositar</button>
-        </form>
-    </main>
-    <footer>
-        <p>
-            &copy; Alke Wallet 2025
-        </p>
-    </footer>
+
+  <head>
+    <h1>Alke Wallet</h1>
+    <h2>Depósito</h2>
+    <nav>
+      <ul>
+        <li><a href="login.html">Cerrar Sesión</a></li>
+        <li><a href="menu.html">Volver al menú</a></li>
+      </ul>
+    </nav>
+  </head>
+  <main>
+    <form action="" method="post">
+      <!--Desde-->
+      <label for="from-account">Cuenta de Origen</label><br>
+      <select name="from-account" id="from-account">
+        <option value="cuenta-0002311423">N°0002311423</option>
+        <option value="cuenta-0002355196">N°0002355196</option>
+        <option value="cuenta-0002378830">N°0002378830</option>
+      </select>
+      <p id="available-balance">Saldo disponible: $140000</p>
+      <!--Hacia-->
+      <label for="to-account">Cuenta de Destino</label><br>
+      <select name="to-account" id="to-account">
+        <option value="cuenta-0002311423">N°0002311423</option>
+        <option value="cuenta-0002355196">N°0002355196</option>
+        <option value="cuenta-0002378830">N°0002378830</option>
+      </select><br><br>
+      <label for="ammount">Monto</label><br>
+      <input type="number" name="ammount" id="ammount" min="1" placeholder="ej:5000"><br><br>
+      <button type="submit">Depositar</button>
+    </form>
+  </main>
+  <footer>
+    <p>
+      &copy; Alke Wallet 2025
+    </p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
+    integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
