--- a/index.html
+++ b/index.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Allan Morales">
-    <title>Alke Wallet | Index</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Allan Morales">
+  <title>Alke Wallet | Index</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/base.css">
 </head>
+
 <body>
-    <header>
-        <h1>Alke Wallet</h1>
-    </header>
-    <main>
-        <a href="/login.html">Ingresar</a>
-    </main>
-    <footer>
-        <p>
-            &copy; Alke Wallet 2025
-        </p>
-    </footer>
+  <header>
+    <h1>Alke Wallet</h1>
+    <p>Tu billetera digital segura</p>
+
+  </header>
+  <main>
+    <section id="register">
+      <p>Regístrate ahora y comienza a gestionar tus finanzas de forma rápida y segura</p>
+      <form>
+        <label for="email">
+          Correo electrónico <br>
+          <input type="email" name="email" placeholder="ejemplo@email.com"><br><br>
+        </label>
+        <label for="password">
+          Contraseña <br>
+          <input type="password" name="password"> 
+        </label>
+        <label for="confirm-password">
+          Confirmar Contraseña <br>
+          <input type="password" name="confirm-password">
+        </label><br><br>
+        <button type="submit">Crear Cuenta</button><br><br>
+      </form>
+    </section>
+    <div>
+      <p>¿Ya estabas registrado?, entonces <a href="login.html">Accede a tu cuenta</a></p>
+    </div>
+  </main>
+  <footer>
+    <p>
+      &copy; Alke Wallet 2025
+    </p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
+    integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
