--- a/login.html
+++ b/login.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Allan Morales">
     <title>Alke Wallet | Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
         <h1>Alke Wallet</h1>
+        <p>Tu billetera digital segura</p>
     </header>
     <main>
-        <form action="menu.html" method="post"> <!-- ERROR: Método NO AUTORIZADO con Live Server-->
+        <form action="menu.html" method="get"> <!-- ERROR: Método NO AUTORIZADO con Live Server-->
             <div>
                 <label for="email">Correo electrónico</label><br>
                 <input type="email" name="email" id="email"><br><br>
@@ -20,13 +26,23 @@
                 <label for="password">Contraseña</label><br>
                 <input type="password" name="password" id="password"><br><br>
             </div>
-            <button type="submit">Iniciar Sesión</button>
+            <button type="submit">Iniciar Sesión</button><br><br>
         </form>
+        <div>
+            <p>¿No tienes una cuenta?, entonces <a href="index.html">Regístrate</a></p>
+        </div>
     </main>
     <footer>
         <p>
             &copy; Alke Wallet 2025
         </p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
+        integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
