--- a/index.html
+++ b/index.html
@@ -8,42 +8,68 @@
   <title>Alke Wallet | Index</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/base.css">
+  <link rel="stylesheet" href="assets/css/index.css">
 </head>
 
 <body>
-  <header>
-    <h1>Alke Wallet</h1>
-    <p>Tu billetera digital segura</p>
-
+  <header class="py-4 mb-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h1 class="display-4 mb-2">Alke Wallet</h1>
+          <p class="lead">Tu billetera digital segura</p>
+        </div>
+      </div>
+    </div>
   </header>
-  <main>
-    <section id="register">
-      <p>Regístrate ahora y comienza a gestionar tus finanzas de forma rápida y segura</p>
-      <form>
-        <label for="email">
-          Correo electrónico <br>
-          <input type="email" name="email" placeholder="ejemplo@email.com"><br><br>
-        </label>
-        <label for="password">
-          Contraseña <br>
-          <input type="password" name="password"> 
-        </label>
-        <label for="confirm-password">
-          Confirmar Contraseña <br>
-          <input type="password" name="confirm-password">
-        </label><br><br>
-        <button type="submit">Crear Cuenta</button><br><br>
-      </form>
-    </section>
-    <div>
-      <p>¿Ya estabas registrado?, entonces <a href="login.html">Accede a tu cuenta</a></p>
+
+  <main class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-10 col-lg-8 col-xl-6">
+        <section id="register" class="p-4 mb-4">
+          <p class="text-center mb-4">Regístrate ahora y comienza a gestionar tus finanzas de forma rápida y segura</p>
+          <form>
+            <div class="mb-3">
+              <label for="email" class="form-label">
+                Correo electrónico
+              </label>
+              <input type="email" class="form-control" id="email" name="email" placeholder="ejemplo@email.com">
+            </div>
+
+            <div class="mb-3">
+              <label for="password" class="form-label">
+                Contraseña
+              </label>
+              <input type="password" class="form-control" id="password" name="password">
+            </div>
+
+            <div class="mb-4">
+              <label for="confirm-password" class="form-label">
+                Confirmar Contraseña
+              </label>
+              <input type="password" class="form-control" id="confirm-password" name="confirm-password">
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-lg w-100">Crear Cuenta</button>
+          </form>
+        </section>
+
+        <div class="text-center p-3">
+          <p class="mb-0">¿Ya estabas registrado?, entonces <a href="login.html">Accede a tu cuenta</a></p>
+        </div>
+      </div>
     </div>
   </main>
-  <footer>
-    <p>
-      &copy; Alke Wallet 2025
-    </p>
+  <footer class="py-3 mt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <p class="mb-0">
+            &copy; Alke Wallet 2025
+          </p>
+        </div>
+      </div>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
