login functionality done

--- a/menu.html
+++ b/menu.html
@@ -15,9 +15,9 @@
   <header class="py-4 mb-4">
     <div class="container position-relative">
       <div class="header-content">
-        <h1>Alke Wallet</h1>
-        <h3>Bienvenido(a), Sr. Usuario</h3>
-        <a href="login.html" class="btn btn-outline-light btn-sm mt-2">Cerrar Sesión</a>
+        <h1 class="display-4 mb-2">Alke Wallet</h1>
+        <h3 id="welcome-message" class="mb-3">Bienvenido(a), Sr. Usuario</h3>
+        <a href="login.html" class="btn btn-outline-light btn-sm mt-2" id="logout-btn">Cerrar Sesión</a>
       </div>
     </div>
   </header>
