--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
                     <div class="login-card">
-                        <form action="menu.html" method="get">
+                        <form id="login-form">
                             <div class="mb-4">
                                 <h2 class="text-center mb-4">Iniciar Sesión</h2>
                             </div>
@@ -73,6 +73,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
         integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
         crossorigin="anonymous"></script>
+        <script src="assets/js/login.js"></script>
 </body>
 
 </html>
